# tidepool

./: .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0ba969b30ca6_file_table_drop_uri_and_add_item_uuid.py  2ed1c354a392_create_file_table.py  7f14f9b46f7b_foreign_key_on_file_to_item.py  8191c61b75df_convert_item_description_to_metadata_.py  c574cbc38101_create_relationship_table.py  e6145a19b6ff_initial_migration.py
tests/: conftest.py  test_files.py  test_items.py  test_repository.py  test_settings.py
tests/fixtures/data/text/: tidepool_wikipedia.txt
tests/fixtures/settings/: settings_test.py  settings_test_addition_1.py
tidepool/: __init__.py  exceptions.py  file.py  item.py  relationship.py  repository.py  settings.py  settings_template.py
tidepool/api/: app.py
tidepool/services/: __init__.py  db.py  storage.py
tidepool/services/db/: __init__.py  base.py
tidepool/services/db/postgres/: README.md  alembic.ini
tidepool/services/db/postgres/alembic/versions/: 0c5d1005eac1_initial_postgres_migration.py
tidepool/services/db/sqlite/: README.md  alembic.ini
tidepool/services/db/sqlite/alembic/versions/: 5c5e0117ed23_initial_sqlite_migration.py
tidepool/services/storage/: __init__.py  base.py  posix.py  s3.py
tidepool/settings/: base.py  manager.py
tidepool/ui/: README.md  app.py
tidepool/ui/static/css/: tidepool.css
tidepool/ui/templates/: base.html  file.html  index.html  item.html  items.html
