[project]
name = "tidepool"
version = "0.1.0"
description = "Tidepool repository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "boto3>=1.36.11",
    "ipython>=8.32.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "sqlalchemy>=2.0.37",
]
